fix: collapse style

--- a/src/components/Application/styles/Sidebar/Servers.module.scss
+++ b/src/components/Application/styles/Sidebar/Servers.module.scss
@@ -5,43 +5,49 @@
 }
 
 @mixin disappear {
+  visibility: hidden;
   opacity: 0;
-  z-index: -1;
+  height: 0 !important;
+  width: 0 !important;
+  min-width: 0 !important;
+  max-width: 0 !important;
 }
 
 .collapsed {
   min-width: 99px !important;
   width: 99px !important;
 
-  &>.wrapper {
+  & > .wrapper {
     & > .collapse {
       rotate: 180deg;
     }
-    &>div {
-      &>.server_container {
-        &>.title {
+    & > div {
+      & > .server_container {
+        gap: 0 !important;
+        & > .title {
           @include disappear;
         }
       }
     }
-    &>div {
-      &>.divider {
+    & > div {
+      & > .divider {
         width: 49px !important;
       }
     }
 
-    &>.details {
-      &>.down_bar {
-        &>.left {
-          &>.user {
+    & > .details {
+      & > .down_bar {
+        & > .left {
+          gap: 0 !important;
+          & > .user {
             @include disappear;
           }
         }
       }
     }
 
-    &>.input_wrapper {
-      &>input {
+    & > .input_wrapper {
+      & > input {
         display: none !important;
       }
     }
@@ -57,12 +63,11 @@
   justify-content: center;
   transition: all 0.5s ease;
 
-  *>* {
+  * > * {
     transition: all 0.5s ease;
-
   }
 
-  &>.wrapper {
+  & > .wrapper {
     width: calc(100% - 50px);
     margin-block: 25px;
     display: grid;
@@ -71,7 +76,7 @@
     flex-direction: column;
     position: relative;
 
-    &>.collapse {
+    & > .collapse {
       &:hover {
         scale: 1.2;
       }
@@ -92,75 +97,76 @@
       transition: all 0.5s ease;
     }
 
-    &>.current {
+    & > .current {
       display: flex;
       flex-direction: column;
       gap: 15px;
 
-      &>.divider {
+      & > .divider {
         @include divider;
       }
     }
 
-    &>.servers {
+    & > .servers {
       overflow-y: auto;
+      overflow-x: hidden;
       display: flex;
       flex-direction: column;
       gap: 15px;
     }
 
-    &>.input_wrapper {
+    & > .input_wrapper {
       height: 40px;
       background-color: #1c1c1c;
       border-radius: 5px;
 
-      &>input {
+      & > input {
         width: 100%;
         height: 100%;
         background-color: transparent;
         outline: none;
         border: none;
-        font-family: "Oswald";
+        font-family: 'Oswald';
         font-style: normal;
         font-weight: 700;
         padding-left: 15px;
       }
     }
 
-    &>.details {
+    & > .details {
       width: 100%;
       height: 100%;
       display: flex;
       flex-direction: column;
       gap: 15px;
 
-      &>.divider {
+      & > .divider {
         @include divider;
       }
 
-      &>.down_bar {
+      & > .down_bar {
         height: 49px;
         width: 100%;
 
-        &>.left {
+        & > .left {
           height: 100%;
           width: 100%;
           display: flex;
           gap: 20px;
 
-          &>img {
+          & > img {
             border-radius: 100%;
             width: 49px;
             height: 100%;
           }
 
-          &>.user {
+          & > .user {
             height: 100%;
             display: flex;
             flex-direction: column;
             gap: 5px;
 
-            &>.username {
+            & > .username {
               font-family: Oswald;
               font-size: 16px;
               font-weight: 700;
@@ -170,7 +176,7 @@
               color: #ffd9d9;
             }
 
-            &>.status {
+            & > .status {
               font-family: Oswald;
               font-size: 12px;
               font-weight: 400;
@@ -190,7 +196,7 @@
   display: flex;
   gap: 20px;
 
-  &>.icon {
+  & > .icon {
     width: 49px;
     height: 49px;
     background: #1c1c1c;
@@ -198,23 +204,23 @@
     outline: none;
   }
 
-  &>.title {
-    &>.name {
+  & > .title {
+    & > .name {
       height: 27px;
-      font-family: "Oswald";
+      font-family: 'Oswald';
       font-style: normal;
       font-weight: 700;
       font-size: 18px;
       line-height: 27px;
     }
 
-    &>.users {
+    & > .users {
       display: flex;
 
-      &>div {
+      & > div {
         width: 10px;
 
-        &>img {
+        & > img {
           width: 15px;
           height: 15px;
           border-radius: 100%;
